# dynamodb_prototype

./: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  fly.toml  template.yaml
.github/workflows/: ci.yml  deploy.yml  docker-build-publish.yml
dashboard/static/: auth.js  bronze.html  builds.html  index.html  infrastructure.html  messages.html  overview.html  silver.html  spend.html
data/sample/: event1.json  event2.json
docs/: ML_data_pipeline_case_study.md  OIDC_SETUP.md
go-pipeline-monitor/: Dockerfile  fly.toml  go.mod  main.go
src/: bronze.rs  gold.rs  ingest.rs  lib.rs  main.rs  models.rs  processing.rs  silver.rs  sink.rs
