[package]
name = "dynamodb_prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.5"
aws-sdk-dynamodb = "1.56"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
axum = "0.6"
tower = "0.4"
anyhow = "1.0"
