[package]
name = "dynamodb_prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.5"
aws-sdk-dynamodb = "1.56"
aws-sdk-cloudwatch = "1"
aws-sdk-costexplorer = "1"
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
axum = "0.6"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
anyhow = "1.0"
